# start-your-python

./: .env.mobile  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  NEXT_TASKS.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  capacitor.config.ts  current_styles.css  fix_bottom_bar.py  fix_css.py  index.html  neutralino.config.json  new_styles.css  new_styles_fixed.css  package-lock.json  package.json  patch_css.py  patch_css2.py  release-notes-v1.1.0.md  replace_styles.py  vite.config.ts  vitest.config.mjs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-artifacts.yml  cd.yaml  ci.yaml
.tmp/: neutralino.config.json  window_state.config.json
.trae/documents/: plan_20260213_135619.md
assets/lessons/: README.md
docs/: LESSON_GUIDE.md  ROADMAP.md
lessons/第一章 Python环境准备/: Python是什么.py  安装Python.py  第一次运行Python.py  配置开发环境.py
lessons/第七章 文件与模块/: 写入文件.py  标准库初识.py  模块导入.py  读取文件.py
lessons/第三章 变量与数据类型/: 变量基础.py  字符串类型.py  布尔类型.py  数字类型.py  类型转换.py
lessons/第二章 基础语法入门/: Hello World.py  常见语法错误.py  注释与缩进.py  输入与输出.py
lessons/第五章 循环与函数/: for循环.py  while循环.py  函数参数与返回值.py  定义函数.py
lessons/第八章 面向对象入门/: 属性与方法.py  构造方法.py  简单继承.py  类与对象.py
lessons/第六章 常用数据结构/: 元组.py  列表.py  字典.py  集合.py
lessons/第四章 运算与判断/: if语句.py  比较运算符.py  算术运算符.py  逻辑运算符.py
scripts/: migrate-lesson-files-to-dsl.mjs  package-windows-release.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/composables/: useLessonCatalog.ts
src/data/: courseTree.ts  lessonsData.ts  (+1 more)
(+98 files in other folders)
