[package]
name = "start-your-python"
version = "1.1.0"
description = "PyCharm-inspired Python learning workspace built with Vue and Tauri"
authors = ["sunnyhmz7010"]
license = "MIT"
repository = "https://github.com/sunnyhmz7010/start-your-python"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "start_your_python_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
